# xenon

./: .gitignore  ChangeLog.ru.txt  README-RU.md  README.md
agents/: abstract_agent.cpp  abstract_agent.h  airport.cpp  airport_network.cpp  airport_network.h  tested_agents.h
agents/.Attic/: abstract_agent.cpp  abstract_agent.h
agents/aircraft/: CMakeLists.txt  agent_aircraft.cpp  agent_aircraft.h  external_aircraft.h  main.cpp
agents/aircraft/.Attic/: external_aircraft.cpp
agents/frames/: abstract_frame.cpp  abstract_frame.h  entity_frame.cpp  hp_lu_occupated.cpp  hp_lu_occupated.h  hp_some_one_landing.cpp  hp_some_one_landing.h  lu_before_take_off.cpp  lu_before_take_off.h  push_back_allowed.cpp  push_back_allowed.h  state_frame.cpp  state_frame.h  taxing_distance.cpp  taxing_distance.h  taxing_push_back_ahead.cpp  taxing_push_back_ahead.h
autopilot/: Makefile  XeAutopilot.cpp  XeAutopilot.h  autopilot.pro
common/: UserInterface.h  abstract_aircraft.cpp  abstract_aircraft.h  abstract_vehicle.cpp  abstract_vehicle.h  agent_interface.h  airport.cpp  airport.h  airport_network.cpp  airport_network.h  bimbo_aircraft.cpp  bimbo_aircraft.h  constants.h  exceptions.h  flight_plan.cpp  flight_plan.h  jsonable.cpp  jsonable.h  logger.cpp  logger.h  settings.h  structures.h  tested_agents.h  utils.cpp  utils.h  utils.hpp
common/control/: abstract_aircrafter.h  aircraft_abstract_action.cpp  aircraft_abstract_action.h  aircraft_abstract_state.cpp  aircraft_abstract_state.h  aircraft_does_becoming.cpp  aircraft_does_becoming.h  aircraft_does_flying.cpp  aircraft_does_flying.h  aircraft_does_gliding.cpp  aircraft_does_gliding.h  aircraft_does_landing.cpp  aircraft_does_landing.h  aircraft_does_lining_up.cpp  aircraft_does_lining_up.h  aircraft_does_nothing.cpp  aircraft_does_parking.cpp  aircraft_does_parking.h  aircraft_does_push_back.cpp  aircraft_does_push_back.h  aircraft_does_runway_leaving.cpp  aircraft_does_slow_taxing.cpp  aircraft_does_slow_taxing.h  aircraft_does_start_motion.h  aircraft_does_take_off.cpp  aircraft_does_taxing.cpp  aircraft_does_taxing.h  aircraft_does_taxing_stop.cpp  aircraft_does_taxing_stop.h  aircraft_does_waiting_push_back.cpp  aircraft_does_waiting_push_back.h  aircraft_does_waiting_take_off_approval.cpp  aircraft_does_waiting_take_off_approval.h  aircraft_state_airborned.cpp  aircraft_state_approach.cpp  aircraft_state_approach.h  aircraft_state_before_parking.cpp  aircraft_state_before_parking.h  aircraft_state_graph.cpp  aircraft_state_graph.h  (+14 more)
common/control/.Attic/: abstract_aircrafter.h  aircraft_does_runway_leaving.cpp
common/frames/: abstract_frame.cpp  abstract_frame.h  entity_frame.h
common/network/: Ambient.cpp  Ambient.h  CommandAutopilotState.cpp  CommandAutopilotState.h  CommandSet.cpp  CommandSet.h  XeNetwork.cpp  XeNetwork.h  abstract_command.cpp  abstract_command.h  abstract_command_transmitter.hpp  command_parser.cpp  command_parser.h  connected_communicator.cpp  connected_communicator.h  connected_communicator_reactor.h  talker.cpp  talker.h  url.cpp  url.h
common/network/.Attic/: abstract_command_transmitter.hpp  aircraft_state.cpp  aircraft_state.h  async_connected_communicator.cpp  (+3 more)
common/widgets/: Altitude.cpp  Altitude.h  AutopilotControlWidget.cpp  AutopilotControlWidget.h  Heading.cpp  Heading.h  LCDWithButtons.cpp  LCDWithButtons.h  RepeatableButton.cpp  RepeatableButton.h  VerticalSpeed.cpp  VerticalSpeed.h  altitude.ui  autopilot_control.ui  control_widget.ui  heading.ui  lcd_with_buttons.ui  repeatable_button.ui  vertical_speed.ui
desktop/: Makefile  XeDesktop.cpp  XeDesktop.h  desktop.pro  main_window.ui
desktop/resources/: MainTab.css
helpers/: Makefile  main.cpp  test.pro
helpers/airport/: CMakeLists.txt  main.cpp
helpers/whazzup_reader_thread/: CMakeLists.txt  main.cpp
simulators/xplane/xenon/: CMakeLists.txt  README.txt  XAmbient.cpp  XAmbient.h  XNetworking.cpp  abstract_aircraft.cpp  abstract_aircraft.h  abstract_vehicle.cpp  abstract_vehicle.h  airport.cpp  airport.h  airport_cleaner.cpp  airport_cleaner.h  airport_network.cpp  airport_network.h  bimbo_aircraft.cpp  bimbo_aircraft.h  main_plugin.cpp  talker.h  user_aircraft.cpp  user_aircraft.h  windll_main.cpp  xplane.hpp  xplane_communicator.h  xplane_communicator_interface.h  xplane_plugin.cpp  xplane_plugin.h  xplane_utilities.h
simulators/xplane/xenon/.Attic/: Makefile  XAutopilotState.cpp  XAutopilotState.h  XNetworking.h  XSetReactor.h  abstract_observed_object.cpp  abstract_observed_object.h  action_finished_reactor.h  ai_controlled_aircraft.cpp  ai_controlled_aircraft.h
simulators/xplane/xenon/3dparty/libXPMP2/include/: XPMPAircraft.h
simulators/xplane/xenon/control/: abstract_aircrafter.h  aircraft_abstract_action.cpp  aircraft_abstract_action.h  aircraft_abstract_does.cpp  aircraft_abstract_does.h  aircraft_abstract_state.cpp  aircraft_abstract_state.h  aircraft_does_flying.cpp  aircraft_does_flying.h  aircraft_does_landing.cpp  aircraft_does_landing.h  aircraft_does_lining_up.cpp  aircraft_does_lining_up.h  aircraft_does_nothing.cpp  aircraft_does_nothing.h  aircraft_does_push_back.cpp  aircraft_does_push_back.h  aircraft_does_runway_leaving.h  aircraft_does_slow_taxing.cpp  aircraft_does_slow_taxing.h  aircraft_does_take_off.cpp  aircraft_does_take_off.h  aircraft_does_taxing.cpp  aircraft_does_taxing.h  aircraft_state_airborned.cpp  aircraft_state_airborned.h  aircraft_state_graph.cpp  aircraft_state_graph.h  aircraft_state_graph_definition.h  aircraft_state_on_final.cpp  aircraft_state_on_final.h  aircraft_state_on_hp.h  aircraft_state_parking.cpp  aircraft_state_parking.h  aircraft_state_ready_for_take_off.h  aircraft_state_ready_for_taxing.cpp  aircraft_state_ready_for_taxing.h  aircraft_state_runway_leaved.h  does_finished_reactor.h
simulators/xplane/xenon/ivao/: ivao_periodically_updated_file.cpp  ivao_periodically_updated_file.h  ivao_status_file.cpp  ivao_status_file.h  ivao_whazzup_file.cpp  ivao_whazzup_file.h  whazzup_reader_thread.cpp  whazzup_reader_thread.h
tests/airport/: CMakeLists.txt  main.cpp
(+14 files in other folders)
